<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMIApplicationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_heading"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="32sp"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        />

    <EditText
        android:id="@+id/weight_text_view"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:hint="@string/textview_1_hint"
        android:inputType="number"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/height_text_view"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/textview_2_hint"
        android:gravity="center"
        android:layout_below="@+id/weight_text_view"
        android:layout_marginBottom="8dp"
        android:inputType="number"
        />

    <Button
        android:id="@+id/calculate_btn"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:onClick="calculateFunction"
        android:text="@string/calculate_btn"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/height_text_view"/>

    <TextView
        android:id="@+id/bmi_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calculate_btn"
        android:layout_margin="16dp"
        android:layout_centerHorizontal="true"
        tools:text="Ouput"
        android:padding="8dp"
        android:textSize="20sp"
        android:fontFamily="serif"/>

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/bmi_text_view"
        android:layout_marginBottom="16dp"
        tools:src="@drawable/healthy"
        android:contentDescription="@string/output_text_view_desc"/>


</RelativeLayout>