<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuessMyNumberActivity">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="25dp"
        android:padding="12dp"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:textSize="30sp"
        tools:text="question"
        />
    <TextView
        android:id="@+id/success_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_success"
        android:layout_centerInParent="true"
        android:textColor="@color/colorSuccess"
        android:textSize="25sp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/success_number_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="question"
        android:layout_below="@+id/success_text_view"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:textSize="25sp"
        android:fontFamily="sans-serif"/>
    <Button
        android:id="@+id/reset_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/colorResetBtn"
        android:text="@string/reset_btn"
        android:textColor="@color/black"
        android:layout_margin="12dp"
        android:onClick="resetFunction"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_above="@+id/reset_btn"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:weightSum="6">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/downward_arrow"
            android:layout_weight="2"
            android:contentDescription="@string/btn_downward_desc"
            android:onClick="arrowDown"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/success"
            android:layout_weight="2"
            android:contentDescription="@string/btn_Correct_desc"
            android:onClick="successFunction"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/upward_arrow"
            android:layout_weight="2"
            android:contentDescription="@string/btn_upward_desc"
            android:onClick="arrowUp"/>
    </LinearLayout>
</RelativeLayout>